Fix images stretching for print layout, added badge for tripod.

--- a/microblog/static/css/bootstrap.css
+++ b/microblog/static/css/bootstrap.css
@@ -244,9 +244,6 @@ table {
   img {
     page-break-inside: avoid;
   }
-  img {
-    max-width: 100% !important;
-  }
   @page  {
     margin: 4cm;
   }
